# eliza

./: .biomeignore  .codefactor.yml  .dockerignore  .env.example  .env.test.example  .env.xmrt.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  ACTION_PROVIDER_INVENTORY.md  ACTION_TREE_REVIEW.md  AGENTS.md  BENCHMARK_RESULTS.md  BRAND-TODO.md  BROWSER_ACTION_5.md  BROWSER_CYCLE_5.md  BROWSER_EXAMPLE.md  CHANGELOG.md  CLAUDE.md  CONNECTOR_TEST_AUDIT.md  CONSOLIDATION_AUDIT.md  CONSOLIDATION_PLAN.md  CONTRIBUTING.md  CONTRIBUTIONS.md  DATABASE_API_CHANGELOG.md  DATABASE_API_README.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  DESIGN.md  DEVELOPMENT_ACTION_1.md  DEVELOPMENT_CYCLE_1.md  DOCUMENTATION_COMPLETE.md  Dockerfile  Dockerfile.railway  E2E_SWEEP_REPORT.md  ELIZA_1_GGUF_PLATFORM_PLAN.json  ELIZA_1_GGUF_READINESS.md  ELIZA_1_PRODUCTION_READINESS_REVIEW.md  (+69 more)
benchmarks/milaidy-adapter/: pyproject.toml
benchmarks/milaidy-adapter/milaidy_adapter/: __init__.py  agentbench.py  client.py  context_bench.py  mind2web.py  server_manager.py  tau_bench.py
examples/_plugin/python/: README.md  pyproject.toml
examples/_plugin/python/elizaos_plugin_starter/: plugin.py
examples/autonomous/rust/: Cargo.toml
examples/autonomous/rust/autonomous/: Cargo.toml
examples/autonomous/rust/src/: main.rs
examples/gcp/rust/: Cargo.toml  Dockerfile
examples/gcp/rust/src/: main.rs
plugins/plugin-acp/python/: README.md  pyproject.toml
plugins/plugin-acp/python/elizaos_plugin_acp/: __init__.py  client.py  plugin.py  types.py
plugins/plugin-acp/python/tests/: __init__.py  conftest.py  test_actions.py  test_client.py  test_types.py
plugins/plugin-agent-orchestrator/python/: README.md  pyproject.toml
plugins/plugin-agent-orchestrator/python/elizaos_plugin_agent_orchestrator/: __init__.py  config.py  service.py  types.py
plugins/plugin-agent-orchestrator/python/tests/: __init__.py  conftest.py  test_service.py
plugins/plugin-agent-orchestrator/rust/: Cargo.toml  README.md
plugins/plugin-agent-orchestrator/rust/src/: config.rs  error.rs  lib.rs  service.rs  types.rs
plugins/plugin-agent-orchestrator/rust/tests/: integration_tests.rs
plugins/plugin-agent-skills/python/: README.md  pyproject.toml
plugins/plugin-agent-skills/python/elizaos_plugin_agent_skills/: __init__.py  parser.py  plugin.py  service.py  storage.py  types.py
plugins/plugin-agent-skills/python/tests/: __init__.py  test_integration.py  test_parser.py  test_storage.py
plugins/plugin-agent-skills/rust/: Cargo.toml
plugins/plugin-agent-skills/rust/src/: error.rs  lib.rs  parser.rs  service.rs  storage.rs  types.rs
plugins/plugin-agent-skills/rust/tests/: integration_tests.rs  parser_tests.rs
plugins/plugin-auto-trader/python/: pyproject.toml
plugins/plugin-auto-trader/python/elizaos_plugin_auto_trader/: __init__.py  portfolio.py  service.py  types.py
plugins/plugin-auto-trader/python/tests/: conftest.py  test_actions.py  test_portfolio.py  test_provider.py  test_service.py  test_strategies.py
plugins/plugin-auto-trader/rust/: Cargo.toml
plugins/plugin-auto-trader/rust/src/: lib.rs  portfolio.rs  service.rs  types.rs
plugins/plugin-auto-trader/rust/tests/: integration_tests.rs
plugins/plugin-blooio/python/: pyproject.toml
plugins/plugin-blooio/python/elizaos_plugin_blooio/: __init__.py  constants.py  service.py  types.py  utils.py
plugins/plugin-blooio/python/tests/: conftest.py  test_actions.py  test_service.py  test_utils.py
plugins/plugin-blooio/rust/: Cargo.toml
plugins/plugin-blooio/rust/src/: constants.rs  lib.rs  service.rs  types.rs  utils.rs
plugins/plugin-blooio/rust/tests/: integration_tests.rs
plugins/plugin-bluebubbles/rust/: Cargo.toml
plugins/plugin-bluebubbles/rust/src/: client.rs  config.rs  error.rs  lib.rs  service.rs  types.rs
plugins/plugin-bluebubbles/rust/tests/: integration_tests.rs
plugins/plugin-bootstrap/python/: pyproject.toml
plugins/plugin-bootstrap/python/elizaos_plugin_bootstrap/: __init__.py  types.py
plugins/plugin-bootstrap/python/tests/: __init__.py  conftest.py  test_plugin.py  test_providers.py  test_services.py
plugins/plugin-browser/python/: README.md  pyproject.toml
plugins/plugin-browser/python/elizaos_browser/: __init__.py  plugin.py  types.py
plugins/plugin-browser/python/tests/: __init__.py  conftest.py  test_actions.py  test_types.py  test_utils.py
plugins/plugin-browser/rust/: Cargo.toml  README.md
plugins/plugin-browser/rust/src/: lib.rs  plugin.rs  types.rs
plugins/plugin-browser/rust/tests/: integration_tests.rs
plugins/plugin-cli/python/: pyproject.toml
plugins/plugin-cli/python/elizaos_plugin_cli/: __init__.py  registry.py  types.py  utils.py
plugins/plugin-cli/python/tests/: conftest.py  test_registry.py  test_utils.py
plugins/plugin-code/python/: README.md  pyproject.toml
plugins/plugin-code/python/elizaos_plugin_eliza_coder/: __init__.py  types.py  (+3 more)
plugins/plugin-code/rust/: Cargo.toml  README.md
plugins/plugin-commands/rust/: Cargo.toml
plugins/plugin-computeruse/python/: README.md  pyproject.toml
plugins/plugin-computeruse/rust/: Cargo.toml
plugins/plugin-cron/python/: README.md  pyproject.toml
plugins/plugin-cron/rust/: Cargo.toml
plugins/plugin-directives/python/: README.md  pyproject.toml
plugins/plugin-directives/rust/: Cargo.toml
plugins/plugin-discord/python/: README.md  pyproject.toml
plugins/plugin-discord/rust/: Cargo.toml
plugins/plugin-rlm/: AGENTS.md  CLAUDE.md  PAPER_COMPARISON.md  README.md  biome.json  client.ts  cost.ts  index.ts  package.json  pyproject.toml  server.ts  trajectory-integration.ts  tsconfig.json  types.ts  vitest.config.ts
plugins/plugin-rlm/__tests__/: cost.test.ts  integration.test.ts  plugin.test.ts  server.test.ts  trajectory-integration.test.ts
plugins/plugin-rlm/elizaos_plugin_rlm/: __init__.py  plugin.py
plugins/plugin-rlm/python/: pyproject.toml  requirements-lock.txt
plugins/plugin-rlm/rust/: Cargo.toml
plugins/plugin-rlm/typescript/: biome.json  client.ts  index.ts  package.json  tsconfig.json  types.ts
(+24633 files in other folders)
