[package]
name = "eliza-cloud-run"
version = "1.0.0"
edition = "2021"
description = "elizaOS GCP Cloud Run worker (Rust)"
publish = false

[[bin]]
name = "eliza-cloud-run"
path = "src/main.rs"

[dependencies]
# elizaOS Core
elizaos = { path = "../../../packages/core/rust" }

# elizaOS OpenAI Plugin
elizaos-plugin-openai = { path = "../../../packages/plugin-openai/rust" }

# Web framework
axum = { version = "0.7", features = ["tokio"] }
tower-http = { version = "0.6", features = ["cors"] }

# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "signal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Streaming
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "v7"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Lazy initialization
once_cell = "1.19"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

