[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elizaos-plugin-acp"
version = "2.0.0"
description = "elizaOS ACP Plugin - Agentic Commerce Protocol for checkout and commerce"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "elizaOS Contributors" }
]
keywords = ["ai", "agents", "acp", "commerce", "checkout", "elizaos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.19.0",
    "ruff>=0.14.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/elizaos/eliza"
Documentation = "https://elizaos.ai/docs"
Repository = "https://github.com/elizaos/eliza"

[tool.hatch.build.targets.wheel]
packages = ["elizaos_plugin_acp"]

[tool.hatch.build.targets.sdist]
include = [
    "/elizaos_plugin_acp",
    "/tests",
    "/README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v -p no:anchorpy"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
disallow_any_generics = true
disallow_subclassing_any = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "elizaos_plugin_acp.actions.*",
    "elizaos_plugin_acp.plugin",
    "elizaos_plugin_acp.providers.*",
]
disable_error_code = ["arg-type", "attr-defined", "no-any-return", "type-arg", "assignment", "no-untyped-def", "call-overload"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "T20", # flake8-print
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "ANN101", # missing type for self
    "ANN102", # missing type for cls
    "S101",   # use of assert (needed for tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN001", "ANN201", "ANN202", "ANN204"]

[tool.ruff.lint.isort]
known-first-party = ["elizaos_plugin_acp"]
