[package]
name = "elizaos-plugin-agent-orchestrator"
version = "2.0.0"
edition = "2021"
authors = ["elizaOS Contributors"]
description = "Agent Orchestrator Plugin for ElizaOS - orchestrates tasks across agent providers"
license = "MIT"
repository = "https://github.com/elizaos/eliza"
keywords = ["eliza", "elizaos", "plugin", "orchestrator", "agents", "tasks"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync", "time"] }
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"

# Optional WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
