[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elizaos-plugin-agent-skills"
version = "1.0.0"
description = "Agent Skills plugin for elizaOS - implement the Agent Skills specification with progressive disclosure"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "elizaOS Team" }
]
keywords = [
    "elizaos",
    "plugin",
    "agent-skills",
    "clawhub",
    "otto",
    "skills",
    "agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "anthropic>=0.30.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["elizaos_plugin_agent_skills"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
