[package]
name = "elizaos-plugin-auto-trader"
version = "2.0.0"
edition = "2021"
authors = ["elizaOS Contributors"]
description = "elizaOS Auto Trader Plugin - automated trading strategies"
license = "MIT"
repository = "https://github.com/elizaos/eliza"
homepage = "https://elizaos.ai"
keywords = ["ai", "trading", "strategies", "backtesting", "elizaos"]
categories = ["finance", "asynchronous"]

[lib]
name = "elizaos_plugin_auto_trader"
crate-type = ["lib"]

[features]
default = ["native"]
native = ["tokio/full"]

[dependencies]
tokio = { version = "1.42", features = ["rt", "macros", "time", "sync"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
pretty_assertions = "1.4"

[profile.release]
lto = true
opt-level = "z"
