[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elizaos-plugin-blooio"
version = "1.0.0"
description = "elizaOS Blooio Plugin - messaging via Blooio platform"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "elizaOS Contributors" }]
keywords = ["ai", "messaging", "imessage", "sms", "elizaos"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-httpx>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/elizaos/eliza"
Repository = "https://github.com/elizaos/eliza"

[tool.hatchling.build]
packages = ["elizaos_plugin_blooio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"
asyncio_default_fixture_loop_scope = "function"
