[package]
name = "elizaos-plugin-blooio"
version = "2.0.0"
edition = "2021"
authors = ["elizaOS Contributors"]
description = "elizaOS Blooio Plugin - messaging via Blooio platform"
license = "MIT"
repository = "https://github.com/elizaos/eliza"
homepage = "https://elizaos.ai"
keywords = ["ai", "messaging", "imessage", "sms", "elizaos"]
categories = ["asynchronous", "web-programming"]

[lib]
name = "elizaos_plugin_blooio"
crate-type = ["lib"]

[features]
default = ["native"]
native = ["tokio/full"]

[dependencies]
tokio = { version = "1.42", features = ["rt", "macros"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
regex = "1.12"

[dev-dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
pretty_assertions = "1.4"
mockito = "1.6"

[profile.release]
lto = true
opt-level = "z"
