[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elizaos-plugin-bootstrap"
version = "2.0.0"
description = "elizaOS Bootstrap Plugin - Core actions, providers, evaluators, and services for elizaOS agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "elizaOS Team", email = "team@elizaos.ai" }
]
keywords = ["ai", "agents", "llm", "actions", "providers", "elizaos", "bootstrap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "elizaos>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/elizaos/eliza"
Documentation = "https://elizaos.ai/docs"
Repository = "https://github.com/elizaos/eliza"

[tool.hatch.build.targets.wheel]
packages = ["elizaos_plugin_bootstrap"]

[tool.hatch.build.targets.sdist]
include = [
    "/elizaos_plugin_bootstrap",
    "/tests",
    "/README.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=elizaos_plugin_bootstrap --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["elizaos.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["elizaos_plugin_bootstrap"]

