[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elizaos-plugin-code"
version = "2.0.0"
description = "elizaOS Coder Plugin - filesystem + shell + git (restricted)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "elizaOS Contributors" }]
keywords = ["ai", "agents", "coding", "filesystem", "shell", "git", "elizaos"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = ["pydantic>=2.10.0"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "mypy>=1.14.0",
  "ruff>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/elizaos/eliza"
Repository = "https://github.com/elizaos/eliza"

[tool.hatch.build.targets.wheel]
packages = ["elizaos_plugin_eliza_coder"]

[tool.hatch.build.targets.sdist]
include = ["/elizaos_plugin_eliza_coder", "/tests", "/README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v -p no:anchorpy"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ANN", "S"]
ignore = [
  "E501",
  "ANN101",
  "ANN102",
  "S101",
  "S603",
  "S607",
]

[tool.ruff.lint.isort]
known-first-party = ["elizaos_plugin_eliza_coder"]

