[package]
name = "elizaos-plugin-code"
version = "2.0.0"
edition = "2021"
authors = ["elizaOS Contributors"]
description = "elizaOS Code Plugin - filesystem + shell + git (restricted)"
license = "MIT"
repository = "https://github.com/elizaos/eliza"
homepage = "https://elizaos.ai"
readme = "README.md"
keywords = ["ai", "coding", "filesystem", "shell", "git", "elizaos"]
categories = ["command-line-utilities", "asynchronous"]

[lib]
name = "elizaos_plugin_code"
crate-type = ["lib"]

[features]
default = ["native"]
native = ["tokio/full"]

[dependencies]
tokio = { version = "1.42", features = ["rt", "macros", "process", "time", "fs", "io-util"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
regex = "1.12"

[dev-dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
pretty_assertions = "1.4"
tempfile = "3"

[profile.release]
lto = true
opt-level = "z"

