[package]
name = "elizaos-plugin-commands"
version = "2.0.0"
edition = "2021"
authors = ["elizaOS Contributors"]
description = "elizaOS Commands Plugin - command registry and built-in commands"
license = "MIT"
repository = "https://github.com/elizaos/eliza"
homepage = "https://elizaos.ai"
keywords = ["ai", "commands", "chat", "registry", "elizaos"]
categories = ["command-line-utilities", "asynchronous"]

[lib]
name = "elizaos_plugin_commands"
crate-type = ["lib"]

[features]
default = ["native"]
native = ["tokio/full"]

[dependencies]
tokio = { version = "1.42", features = ["rt", "macros"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
pretty_assertions = "1.4"
