[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elizaos-plugin-computeruse"
version = "2.0.0"
description = "Computer automation plugin for ElizaOS - enables AI agents to control the local machine (when supported) or a ComputerUse MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "elizaOS Contributors" }]
keywords = ["elizaos", "plugin", "computeruse", "automation", "desktop", "mcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pydantic>=2.0",
  "elizaos-plugin-mcp>=2.0.0",
]

[project.optional-dependencies]
local = [
  # Python bindings module name is `computeruse` (distribution in this repo is `computeruse-py`)
  "computeruse-py>=0.24.20",
]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "mypy>=1.0",
  "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["elizaos_plugin_computeruse"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["elizaos_plugin_mcp", "elizaos_plugin_mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=prepend"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

