[package]
name = "elizaos-plugin-computeruse"
version = "2.0.0"
edition = "2021"
authors = ["elizaOS Contributors"]
description = "Computer automation plugin for ElizaOS - enables AI agents to control the local machine (when supported) or a ComputerUse MCP server"
license = "MIT"
repository = "https://github.com/elizaos/eliza"
homepage = "https://elizaos.ai"
keywords = ["elizaos", "plugin", "computeruse", "automation", "desktop", "mcp"]

[lib]
name = "elizaos_computeruse"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.42", features = ["rt", "macros", "process", "time"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"

# Local computer control
computeruse-rs = { package = "computeruse-rs", path = "../../../packages/computeruse/crates/computeruse" }

# MCP client (stdio transport)
elizaos-plugin-mcp = { path = "../../plugin-mcp/rust" }
regex = "1"

[dev-dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

