[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elizaos-plugin-cron"
version = "1.0.0"
description = "elizaOS Cron Plugin - scheduled job management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "elizaOS Contributors" }]
keywords = ["ai", "cron", "scheduling", "jobs", "elizaos"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = ["croniter>=2.0.0"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/elizaos/eliza"
Repository = "https://github.com/elizaos/eliza"

[tool.hatch.build.targets.wheel]
packages = ["elizaos_plugin_cron"]

[tool.hatch.build.targets.sdist]
include = ["/elizaos_plugin_cron", "/tests", "/README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
