[package]
name = "elizaos-plugin-cron"
version = "2.0.0"
edition = "2021"
authors = ["elizaOS Contributors"]
description = "elizaOS Cron Plugin - scheduled job management"
license = "MIT"
repository = "https://github.com/elizaos/eliza"
homepage = "https://elizaos.ai"
readme = "README.md"
keywords = ["ai", "cron", "scheduling", "jobs", "elizaos"]
categories = ["asynchronous", "date-and-time"]

[lib]
name = "elizaos_plugin_cron"
crate-type = ["lib"]

[features]
default = ["native"]
native = ["tokio/full"]

[dependencies]
tokio = { version = "1.42", features = ["rt", "macros", "time", "sync"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
regex = "1.12"

[dev-dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
pretty_assertions = "1.4"

[profile.release]
lto = true
opt-level = "z"
