[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elizaos-plugin-directives"
version = "1.0.0"
description = "elizaOS Directives Plugin - parse and manage agent directives"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "elizaOS Contributors" }]
keywords = ["ai", "agents", "directives", "parsing", "elizaos"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=6.0.0",
  "mypy>=1.14.0",
  "ruff>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/elizaos/eliza"
Repository = "https://github.com/elizaos/eliza"

[tool.hatch.build.targets.wheel]
packages = ["elizaos_plugin_directives"]

[tool.hatch.build.targets.sdist]
include = ["/elizaos_plugin_directives", "/tests", "/README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ANN", "S"]
ignore = ["E501", "ANN101", "ANN102", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["elizaos_plugin_directives"]
